--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,26 @@ img {
 	 
 	 width: 300px;
 
-
-
-
-
 }
+
+.movie img {
+	width: 100%
+}
+
+.movie-table {
+	border: 1px solid white;
+	width: 60%; 
+	margin-top: 100px auto 0 auto; 
+}
+/*table {
+	border: 1px solid white;
+	width: 80%;
+	margin: 100px auto 0 auto;
+}*/
+
+.movie-table tr th, .movie-table tr td {
+	padding: 20px
+	margin-top: 50px 50px 0 0;
+}
+
 
